# mongo-json-schema

./: Cargo.toml  LICENSE  README.md
.github/workflows/: docs.yml  publish.yml
mongo_json_schema/: Cargo.toml
mongo_json_schema/src/: lib.rs  schema.rs
mongo_json_schema/src/impls/: bson.rs  bson2.rs  bson3.rs  chrono.rs  mod.rs  primitives.rs  std_types.rs
mongo_json_schema/tests/: bson.rs  bson2.rs  bson3.rs  chrono.rs  enums.rs  primitives.rs  structs.rs
mongo_json_schema_derive/: Cargo.toml  README.md
mongo_json_schema_derive/src/: attr.rs  lib.rs  rename.rs
