[workspace]
resolver = "2"
members = [
    "mongo_json_schema",
    "mongo_json_schema_derive",
]

[workspace.package]
# LOCKSTEP: `mongo_json_schema` and `mongo_json_schema_derive` are always
# released together with the SAME version. The derive crate is tightly coupled
# to the main crate's private internals, so the dependency below is pinned to an
# exact version. When bumping this `version`, bump the `mongo_json_schema_derive`
# dependency version in [workspace.dependencies] to match (right below).
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aliksend/rust-mongo-json-schema"
authors = ["Alik Send <aliksend@fastmail.com>"]
rust-version = "1.95"

[workspace.dependencies]
# Keep this version in exact lockstep with `workspace.package.version` above.
mongo_json_schema_derive = { path = "mongo_json_schema_derive", version = "=0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
chrono = { version = "0.4", default-features = false }
bson2 = { package = "bson", version = "2" }
bson3 = { package = "bson", version = "3" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
